--- a/style.css
+++ b/style.css
@@ -11,11 +11,21 @@ body {
 
 header {
   height: 100px;
-  width: 100vw;
+  width: 100%;
   -webkit-box-shadow: 0px 0px 10px 0px #5c5c5c;
           box-shadow: 0px 0px 10px 0px #5c5c5c;
   background-color: white;
   position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 100;
 }
 
 .add__list-container {
@@ -23,8 +33,6 @@ header {
   background-color: #f8f8f8;
   height: 80%;
   aspect-ratio: 1;
-  left: 50%;
-  top: 10%;
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -35,19 +43,34 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-shadow: inset 0px 0px 10px 0px #5c5c5c;
-          box-shadow: inset 0px 0px 10px 0px #5c5c5c;
+  -webkit-box-shadow: inset 0px 0px 5px 0px #5c5c5c;
+          box-shadow: inset 0px 0px 5px 0px #5c5c5c;
 }
 
-.add__list-btn {
+.add__list-container svg {
   position: absolute;
-  border: none;
-  background-color: transparent;
-  width: 80%;
-  height: 80%;
-  font-size: 50px;
-  border-radius: 50%;
-  background-color: greenyellow;
+}
+
+.add__button-background circle {
+  cursor: pointer;
+  -webkit-transition: fill .3s;
+  transition: fill .3s;
+  -webkit-box-shadow: 0px 0px 5px 0px #5c5c5c;
+          box-shadow: 0px 0px 5px 0px #5c5c5c;
+}
+
+.add__button-background circle:hover {
+  fill: #9ce72c;
+}
+
+.add__button-plus {
+  cursor: pointer;
+  fill: white;
+  z-index: 1;
+}
+
+.add__button-plus:hover ~ .add__button-background {
+  fill: #9ce72c;
 }
 
 .container {
@@ -80,43 +103,108 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   list-style: none;
   margin-bottom: 15px;
   position: relative;
 }
 
 .task__list-item:last-child {
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 }
 
-.task__list-item:after {
+.task__list-item:not(:last-child):after {
   content: '';
   height: 1px;
   background-color: green;
   width: 80%;
   position: absolute;
-  bottom: -5px;
+  bottom: -8px;
 }
 
-.task__list-input {
-  padding: 5px;
-  outline-color: green;
-  border: 1px green solid;
-  border-radius: 5px;
+.task__list-container {
+  position: relative;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.task__list-btn {
-  padding: 5px 10px;
-  border: 1px green solid;
-  background-color: greenyellow;
-  border-radius: 5px;
+.task__list-text {
+  font-size: 14px;
+  line-height: 21px;
+  outline-style: none;
+  border: none;
+  width: 100%;
+  overflow-y: hidden;
+  word-wrap: break-word;
+  resize: none;
+  z-index: 1;
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.task__list-text:hover ~ .task__list-underlines {
+  opacity: 1;
+}
+
+.task__list-underlines {
+  background-image: linear-gradient(rgba(0, 0, 0, 0) calc(100% - 1px), #757575 calc(100% - 1px));
+  background-size: 100% 21px;
+  opacity: 0.3;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -webkit-transition: opacity .3s;
+  transition: opacity .3s;
+}
+
+.task__list-underlines:hover {
+  opacity: 1;
 }
 
 .task__list-deleteTaskBtn {
   border: none;
   background-color: transparent;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 10px 10px 15px 15px;
+  cursor: pointer;
+  -webkit-transition: color .3s;
+  transition: color .3s;
+}
+
+.task__list-deleteTaskBtn:hover {
+  color: #b11313;
+}
+
+.btn {
+  padding: 5px 10px;
+  margin-left: 10px;
+  border: 1px green solid;
+  background-color: greenyellow;
+  border-radius: 5px;
+  cursor: pointer;
+  -webkit-transition: background-color .3s;
+  transition: background-color .3s;
+}
+
+.btn:hover {
+  background-color: #9ce72c;
+}
+
+.input {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 5px;
+  outline-color: green;
+  border: 1px green solid;
+  border-radius: 5px;
+  width: 30%;
 }
 /*# sourceMappingURL=style.css.map */
