Localstorage updates by change data

--- a/style.css
+++ b/style.css
@@ -127,6 +127,9 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  max-height: 21px;
+  -webkit-transition: max-height .3s linear;
+  transition: max-height .3s linear;
 }
 
 .task__list-text {
@@ -147,6 +150,10 @@ header {
 }
 
 .task__list-text:hover ~ .task__list-underlines {
+  opacity: 1;
+}
+
+.task__list-text:focus ~ .task__list-underlines {
   opacity: 1;
 }
 
@@ -171,15 +178,16 @@ header {
   border: none;
   background-color: transparent;
   font-weight: bold;
-  font-size: 20px;
-  padding: 10px 10px 15px 15px;
+  font-size: 12px;
+  line-height: normal;
+  padding: 4px 10px 4px 15px;
   cursor: pointer;
   -webkit-transition: color .3s;
   transition: color .3s;
 }
 
 .task__list-deleteTaskBtn:hover {
-  color: #b11313;
+  color: #dd1919;
 }
 
 .btn {
